# mbr-cli

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/mbr-cli/: Cargo.toml
crates/mbr-cli/src/: main.rs
crates/mbr-cli/src/cli/: command_handlers.rs  dispatcher.rs  interactive_display.rs  main_types.rs  mod.rs  output.rs
crates/mbr-core/: Cargo.toml
crates/mbr-core/src/: error.rs  lib.rs
crates/mbr-core/src/api/: client.rs  models.rs
crates/mbr-core/src/core/: cache.rs  mod.rs
crates/mbr-core/src/core/services/: auth_service.rs  config_service.rs  mod.rs  traits.rs  types.rs
crates/mbr-core/src/display/: display_options.rs  mod.rs  progress.rs  table.rs
crates/mbr-core/src/storage/: config.rs  credentials.rs
crates/mbr-core/src/utils/: data.rs  input.rs  logging.rs  mod.rs  retry.rs  text.rs  validation.rs
crates/mbr-tui/: Cargo.toml
crates/mbr-tui/src/: action.rs  app.rs  error.rs  event.rs  layout.rs  main.rs  service.rs
crates/mbr-tui/src/app/: action_handler.rs  data_handler.rs  input_handler.rs  mod.rs
crates/mbr-tui/src/components/: clipboard.rs  content.rs  copy_menu.rs  help_overlay.rs  mod.rs  navigation.rs  record_detail.rs  state_renderer.rs  status_bar.rs  styles.rs
crates/mbr-tui/src/components/content/: filter.rs  key_handler.rs  mod.rs  modals.rs  navigation.rs  pagination.rs  result_search.rs  search.rs  selection.rs  sort.rs  types.rs  views.rs
crates/mbr-tui/src/components/content/views/: drill_down.rs  lists.rs  mod.rs  results.rs  welcome.rs
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  models.rs
src/cli/: collection_handler.rs  command_handlers.rs  dashboard_handler.rs  dispatcher.rs  interactive_display.rs  main_types.rs  mod.rs
src/core/: auth.rs  cache.rs
src/core/services/: auth_service.rs  collection_service.rs  config_service.rs  dashboard_service.rs  mod.rs  question_service.rs  traits.rs  types.rs
src/display/: advanced_pagination.rs  display_options.rs  memory_estimator.rs  mod.rs  offset_manager.rs  pagination.rs  progress.rs  table.rs
src/storage/: config.rs  credentials.rs  mod.rs
src/utils/: data.rs  error_helpers.rs  file.rs  helpers.rs  input.rs  logging.rs  mod.rs  retry.rs  text.rs  validation.rs
