[package]
name = "mbr-cli"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Rust-based CLI tool for Metabase API interaction"
repository = "https://github.com/daisuke8000/mbr-cli"
keywords = ["metabase", "cli", "api", "database", "analytics"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
comfy-table = "7.1"
toml = "0.8"
dirs = "6.0"
rpassword = "7.4"
unicode-width = "0.1"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
atty = "0.2"

[dev-dependencies]
tempfile = "3.20"