[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/daisuke8000/mbr-cli"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
toml = "0.8"
dirs = "6.0"
unicode-width = "0.1"
backoff = { version = "0.4", features = ["futures", "tokio"] }
crossterm = "0.29"
atty = "0.2"
async-trait = "0.1"
log = "0.4"
tempfile = "3.20"
ratatui = "0.29"
