[package]
name = "mbr-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for Metabase API interaction"
keywords = ["metabase", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities"]

[[bin]]
name = "mbr-tui"
path = "src/main.rs"

[dependencies]
mbr-core = { path = "../mbr-core" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
